# tiny-oidc-rp

./: .gitignore  Cargo.toml  ChangeLog.md  Dockerfile  LICENSE  README.md  build_lambda.sh
examples/: README.md  sign-in-with-google.rs
src/: client.rs  error.rs  google-jwks.json  id_token.rs  lib.rs  ms-jwks.json  provider.rs  session_store.rs
src/provider/: jwk.rs
