[package]
name = "tiny-oidc-rp"
version = "0.1.0"
authors = ["Hanabusa Masahiro"]
description = "Tiny OpenID Connect Relying Party"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hanabu/tiny-oidc-rp"
license = "MIT"
keywords = ["OIDC", "OpenID"]
categories = ["authentication"]
exclude = []

[features]
default = ["openssl", "reqwest/native-tls"]
rustcrypto = ["rsa", "sha2"]

[dependencies]
base64 = "0.13"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

openssl = { version = "0.10", optional = true }
rsa = { version = "0.5", default-features = false, features = ["std"], optional = true }
sha2 = { version = "0.9", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

