[package]
name = "tiny-oidc-rp"
version = "0.1.0"
authors = ["Hanabusa Masahiro"]
description = "Tiny OpenID Connect Relying Party"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hanabu/tiny-oidc-rp"
license = "MIT"
keywords = ["OIDC", "OpenID"]
categories = ["authentication"]
exclude = []

[dependencies]
base64 = "0.13"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.9", default-features = false, features = ["std"] }
url = "2"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

