[package]
name = "tiny-oidc-rp"
version = "0.2.0-beta1"
authors = ["Hanabusa Masahiro"]
description = "Tiny OpenID Connect Relying Party"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hanabu/tiny-oidc-rp"
license = "MIT"
keywords = ["OIDC", "OpenID"]
categories = ["authentication"]
exclude = []

[dependencies]
base64 = "0.22"
getrandom = "0.3"
log = "0.4"
reqwest = { version="0.12", default-features=false, features=["json"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
sha2 = { version="0.10", default-features=false, features=["std"] }
url = "2"

[dev-dependencies]
axum = { version="0.8" }
axum-extra = { version="0.10", features=["typed-header"] }
env_logger = "0.11"
lambda_http = { version="0.14", default-features=false, features=["apigw_http"] }
reqwest = { version="0.12", default-features=false, features=["json", "rustls-tls"] }
tokio = { version="1", features=["macros", "net", "rt-multi-thread", "sync"] }

[profile.release]
# Size optimization for examples
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
